feat: added support for kindle endpoints
